--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -40,7 +40,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: ecommerce
+      POSTGRES_DB: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
@@ -50,31 +50,31 @@ services:
     ports:
       - "6379:6379"
 
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "80:80"
-    volumes:
-      - ./dockerfiles/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - app
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./dockerfiles/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #     - app
 
-  turnserver:
-    image: coturn/coturn
-    container_name: turnserver
-    restart: always
-    ports:
-      - "3478:3478/udp"
-      - "3478:3478/tcp"
-      - "5349:5349/tcp" # TLS support
-      # Windows-compatible port range (avoiding reserved ports)
-      - "50000-50100:50000-50100/udp" # RTP relay ports
-    volumes:
-      - ./dockerfiles/coturn/turnserver.conf:/etc/turnserver.conf
-    environment:
-      - TURN_USERNAME=webrtc
-      - TURN_PASSWORD=strongpassword
+  # turnserver:
+  #   image: coturn/coturn
+  #   container_name: turnserver
+  #   restart: always
+  #   ports:
+  #     - "3478:3478/udp"
+  #     - "3478:3478/tcp"
+  #     - "5349:5349/tcp" # TLS support
+  #     # Windows-compatible port range (avoiding reserved ports)
+  #     - "50000-50100:50000-50100/udp" # RTP relay ports
+  #   volumes:
+  #     - ./dockerfiles/coturn/turnserver.conf:/etc/turnserver.conf
+  #   environment:
+  #     - TURN_USERNAME=webrtc
+  #     - TURN_PASSWORD=strongpassword
 
   # pgadmin:
   #   image: dpage/pgadmin4:latest
