--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,9 @@
   "dependencies": {
     "@casl/ability": "6.7.3",
     "@casl/prisma": "1.5.1",
-    "@nestjs-modules/mailer": "2.0.2",
+    "@nestjs-modules/mailer": "^2.0.1",
     "@nestjs/bullmq": "11.0.1",
-    "@nestjs/common": "11.0.7",
+    "@nestjs/common": "^11.1.9",
     "@nestjs/config": "4.0.0",
     "@nestjs/core": "11.0.0",
     "@nestjs/jwt": "11.0.0",
@@ -34,13 +34,13 @@
     "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "11.0.7",
     "@nestjs/platform-socket.io": "11.0.7",
-    "@nestjs/swagger": "11.0.3",
+    "@nestjs/swagger": "^11.2.3",
     "@nestjs/throttler": "6.4.0",
     "@nestjs/websockets": "11.0.7",
     "@prisma/client": "^6.5.0",
     "aws-sdk": "2.1692.0",
     "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bullmq": "^5.25.6",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
@@ -50,9 +50,9 @@
     "helmet": "8.0.0",
     "ioredis": "5.4.2",
     "multer": "^1.4.5-lts.1",
-    "nest-commander": "3.16.0",
+    "nest-commander": "^3.20.1",
     "nestjs-url-generator": "1.0.2",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^7.0.11",
     "passport": "0.7.0",
     "passport-facebook": "3.0.0",
     "passport-jwt": "4.0.1",
@@ -67,12 +67,12 @@
     "zod": "3.24.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "11.0.2",
+    "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "11.0.0",
     "@nestjs/testing": "11.0.7",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.12",
-    "@types/bcrypt": "5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/multer": "1.4.12",
@@ -85,7 +85,7 @@
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "eslint": "9.19.0",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "10.0.1",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "29.7.0",
