Updated Docker File

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,36 +1,36 @@
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: ecommerce-backend
-    container_name: ecommerce-backend
-    ports:
-      - "4000:4000"
-    environment:
-      # Required for hot-reloading to work on Windows
-      - CHOKIDAR_USEPOLLING=true
-      # 1 second polling interval
-      - CHOKIDAR_INTERVAL=1000
+  # app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   image: ecommerce-backend
+  #   container_name: ecommerce-backend
+  #   ports:
+  #     - "4000:4000"
+  #   environment:
+  #     # Required for hot-reloading to work on Windows
+  #     - CHOKIDAR_USEPOLLING=true
+  #     # 1 second polling interval
+  #     - CHOKIDAR_INTERVAL=1000
 
-      - NODE_ENV=development
-      # host.docker.internal is the host machine's IP address
-      # - DATABASE_URL=postgresql://postgres:root@host.docker.internal/ecommerce 
-      # for use the "postgres" "service" name
-      - DATABASE_URL=postgresql://postgres:root@postgres/ecommerce
+  #     - NODE_ENV=development
+  #     # host.docker.internal is the host machine's IP address
+  #     # - DATABASE_URL=postgresql://postgres:root@host.docker.internal/ecommerce 
+  #     # for use the "postgres" "service" name
+  #     - DATABASE_URL=postgresql://postgres:root@postgres/ecommerce
 
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - TURN_SERVER=turn:turnserver:3478
-      - TURN_USERNAME=webrtc
-      - TURN_PASSWORD=strongpassword
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
-    depends_on:
-      - postgres
-      - redis
-    command: yarn start:dev-swc
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - TURN_SERVER=turn:turnserver:3478
+  #     - TURN_USERNAME=webrtc
+  #     - TURN_PASSWORD=strongpassword
+  #   volumes:
+  #     - .:/usr/src/app
+  #     - /usr/src/app/node_modules
+  #   depends_on:
+  #     - postgres
+  #     - redis
+  #   command: yarn start:dev-swc
 
   postgres:
     image: postgres:16-alpine
