Fixed packege issue

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,103 +1,46 @@
+version: "3.9"
+
 services:
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   image: ecommerce-backend
-  #   container_name: ecommerce-backend
-  #   ports:
-  #     - "4000:4000"
-  #   environment:
-  #     # Required for hot-reloading to work on Windows
-  #     - CHOKIDAR_USEPOLLING=true
-  #     # 1 second polling interval
-  #     - CHOKIDAR_INTERVAL=1000
-
-  #     - NODE_ENV=development
-  #     # host.docker.internal is the host machine's IP address
-  #     # - DATABASE_URL=postgresql://postgres:root@host.docker.internal/ecommerce 
-  #     # for use the "postgres" "service" name
-  #     - DATABASE_URL=postgresql://postgres:root@postgres/ecommerce
-
-  #     - REDIS_HOST=redis
-  #     - REDIS_PORT=6379
-  #     - TURN_SERVER=turn:turnserver:3478
-  #     - TURN_USERNAME=webrtc
-  #     - TURN_PASSWORD=strongpassword
-  #   volumes:
-  #     - .:/usr/src/app
-  #     - /usr/src/app/node_modules
-  #   depends_on:
-  #     - postgres
-  #     - redis
-  #   command: yarn start:dev-swc
-
   postgres:
     image: postgres:16-alpine
     container_name: postgres
-    ports:
-      - "5432:5432"
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: root
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: Pb3e5/c1VsJ
+      POSTGRES_DB: ecommerce
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend
 
   redis:
-    image: redis:latest
+    image: redis:7-alpine
     container_name: redis
-    ports:
-      - "6379:6379"
+    restart: unless-stopped
+    command: redis-server --requirepass 4ucLhmZ1Zuqgf08vcOIBLY
+    networks:
+      - backend
 
-  # nginx:
-  #   image: nginx:latest
-  #   container_name: nginx
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./dockerfiles/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  #   depends_on:
-  #     - app
-
-  # turnserver:
-  #   image: coturn/coturn
-  #   container_name: turnserver
-  #   restart: always
-  #   ports:
-  #     - "3478:3478/udp"
-  #     - "3478:3478/tcp"
-  #     - "5349:5349/tcp" # TLS support
-  #     # Windows-compatible port range (avoiding reserved ports)
-  #     - "50000-50100:50000-50100/udp" # RTP relay ports
-  #   volumes:
-  #     - ./dockerfiles/coturn/turnserver.conf:/etc/turnserver.conf
-  #   environment:
-  #     - TURN_USERNAME=webrtc
-  #     - TURN_PASSWORD=strongpassword
-
-  # pgadmin:
-  #   image: dpage/pgadmin4:latest
-  #   container_name: pgadmin
-  #   restart: always
-  #   ports:
-  #     - "8080:80"
-  #   environment:
-  #     - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-  #     - PGADMIN_DEFAULT_PASSWORD=admin
-  #     - PGADMIN_CONFIG_SERVER_MODE=False
-  #     - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=False
-  #     # PostgreSQL connection details (from postgres service lines 35-45):
-  #     # Host: postgres (service name)
-  #     # Port: 5432
-  #     # Database: ecommerce
-  #     # Username: postgres
-  #     # Password: root
-  #   volumes:
-  #     - pgadmin_data:/var/lib/pgadmin
+  # app:
+  #   image: ecommerce-backend
+  #   container_name: ecommerce-backend
   #   depends_on:
   #     - postgres
+  #     - redis
+  #   environment:
+  #     DATABASE_URL: postgresql://postgres:STRONG_DB_PASSWORD@postgres:5432/ecommerce
+  #     REDIS_URL: redis://:STRONG_REDIS_PASSWORD@redis:6379
+  #   ports:
+  #     - "4000:4000"
+  #   networks:
+  #     - backend
+  #   user: "1000:1000"
+
+networks:
+  backend:
+    driver: bridge
+    internal: true
 
 volumes:
   postgres_data:
-  pgadmin_data:
