--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,7 @@
     "@nestjs/bullmq": "11.0.1",
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "4.0.0",
-    "@nestjs/core": "11.0.0",
+    "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "11.0.0",
     "@nestjs/mapped-types": "2.1.0",
     "@nestjs/passport": "11.0.5",
@@ -72,6 +72,7 @@
     "@nestjs/testing": "11.0.7",
     "@swc/cli": "0.6.0",
     "@swc/core": "1.10.12",
+    "@types/babel__traverse": "^7.28.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
