--- a/backend/package.json
+++ b/backend/package.json
@@ -23,81 +23,81 @@
   },
   "dependencies": {
     "@casl/ability": "6.7.3",
-    "@casl/prisma": "1.5.1",
-    "@nestjs-modules/mailer": "^2.0.1",
-    "@nestjs/bullmq": "11.0.1",
+    "@casl/prisma": "1.6.0",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "11.0.4",
     "@nestjs/common": "^11.1.9",
-    "@nestjs/config": "4.0.0",
-    "@nestjs/core": "^11.0.1",
-    "@nestjs/jwt": "11.0.0",
+    "@nestjs/config": "4.0.2",
+    "@nestjs/core": "^11.1.9",
+    "@nestjs/jwt": "11.0.2",
     "@nestjs/mapped-types": "2.1.0",
     "@nestjs/passport": "11.0.5",
-    "@nestjs/platform-express": "11.0.7",
-    "@nestjs/platform-socket.io": "11.0.7",
+    "@nestjs/platform-express": "11.1.9",
+    "@nestjs/platform-socket.io": "11.1.9",
     "@nestjs/swagger": "^11.2.3",
-    "@nestjs/throttler": "6.4.0",
-    "@nestjs/websockets": "11.0.7",
-    "@prisma/client": "^6.5.0",
-    "aws-sdk": "2.1692.0",
-    "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
-    "bullmq": "^5.25.6",
+    "@nestjs/throttler": "6.5.0",
+    "@nestjs/websockets": "11.1.9",
+    "@prisma/client": "^7.2.0",
+    "aws-sdk": "2.1693.0",
+    "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "bullmq": "^5.66.2",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.1",
-    "cross-env": "7.0.3",
+    "class-validator": "0.14.3",
+    "cross-env": "10.1.0",
     "date-fns": "^4.1.0",
-    "dayjs": "1.11.13",
-    "helmet": "8.0.0",
-    "ioredis": "5.4.2",
-    "multer": "^1.4.5-lts.1",
+    "dayjs": "1.11.19",
+    "helmet": "8.1.0",
+    "ioredis": "5.8.2",
+    "multer": "^2.0.2",
     "nest-commander": "^3.20.1",
     "nodemailer": "^7.0.11",
     "passport": "0.7.0",
     "passport-facebook": "3.0.0",
     "passport-jwt": "4.0.1",
     "passport-local": "^1.0.0",
-    "puppeteer": "^24.2.0",
+    "puppeteer": "^24.34.0",
     "qrcode": "^1.5.4",
     "reflect-metadata": "0.2.2",
-    "rxjs": "7.8.1",
+    "rxjs": "7.8.2",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
-    "stripe": "17.6.0",
-    "zod": "3.24.1"
+    "stripe": "20.1.0",
+    "zod": "4.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
-    "@nestjs/schematics": "11.0.0",
-    "@nestjs/testing": "11.0.7",
-    "@swc/cli": "0.6.0",
-    "@swc/core": "1.10.12",
+    "@nestjs/schematics": "11.0.9",
+    "@nestjs/testing": "11.1.9",
+    "@swc/cli": "0.7.9",
+    "@swc/core": "1.15.7",
     "@types/babel__traverse": "^7.28.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "5.0.0",
-    "@types/jest": "29.5.14",
-    "@types/multer": "1.4.12",
-    "@types/node": "22.13.0",
-    "@types/nodemailer": "6.4.17",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/express": "5.0.6",
+    "@types/jest": "30.0.0",
+    "@types/multer": "2.0.0",
+    "@types/node": "25.0.3",
+    "@types/nodemailer": "7.0.4",
     "@types/passport-local": "1.0.38",
-    "@types/qrcode": "^1.5.5",
+    "@types/qrcode": "^1.5.6",
     "@types/speakeasy": "^2.0.10",
-    "@types/supertest": "6.0.2",
-    "@types/uuid": "10.0.0",
-    "@typescript-eslint/eslint-plugin": "8.22.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@types/supertest": "6.0.3",
+    "@types/uuid": "11.0.0",
+    "@typescript-eslint/eslint-plugin": "8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "eslint": "^9.39.2",
-    "eslint-config-prettier": "10.0.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "29.7.0",
-    "prettier": "3.4.2",
-    "prisma": "^6.4.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "jest": "30.2.0",
+    "prettier": "3.7.4",
+    "prisma": "^7.2.0",
     "source-map-support": "0.5.21",
-    "supertest": "7.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "9.5.2",
+    "supertest": "7.1.4",
+    "ts-jest": "^29.4.6",
+    "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
